Added auto refresh of remaining time and fixed the working days calculation issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -99,3 +99,10 @@ body
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-style: italic;
 }
+
+.sidebar{
+    padding-left: 0px;
+    background-color: #1f1f1f;
+    min-height: 100vmin;
+    width: 200px;
+}
