--- a/styles/styles.css
+++ b/styles/styles.css
@@ -106,3 +106,9 @@ body
     min-height: 100vmin;
     width: 200px;
 }
+
+.container {
+    
+    display: flex;
+    justify-content: center;
+  }
