--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,36 +1,30 @@
-body 
-{
+body {
     background-color: white;
 }
 
-.headfont
-{
+.headfont {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 300;
 }
 
-.h4font
-{
+.h4font {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 300;
 }
 
-.background
-{
+.background {
     background: black;
     margin: -.5%;
-    height:20vh;
-    text-align:center;
-    color:#fff;    
+    height: 20vh;
+    text-align: center;
+    color: #fff;
 }
 
-.clock
-{
+.clock {
     font-family: monospace;
 }
 
-.Retire
-{
+.Retire {
     font-family: monospace;
     color: white;
     float: left;
@@ -38,77 +32,110 @@ body
     margin-left: 8%;
 }
 
-.BoxText
-{
+.BoxText {
     font-family: monospace;
-    font-size:2.5em;
+    font-size: 2.5em;
     font-weight: lighter;
     padding-top: 20px;
 }
 
-.Boxcontainer 
-{ 
-    width:100%; 
+.Boxcontainer {
+    width: 100%;
     text-align: center;
     padding-top: 0.1em;
     padding-right: 10px;
     padding-bottom: 0.01em;
     padding-left: 0px;
-
-} 
-
-#cardleft
-{   
-    box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    width:30%; 
-    height:460px;
-    float:left; 
-    margin-left:50px; 
-        
 }
 
-#cardMiddle 
-{
-    box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    width:30%; 
-    height:460px;
-    float: left;  
-    margin-left:50px;
+.mainbox-height {
+    min-height: 360px;
 }
 
-#cardRight
-{
-    box-shadow:0 8px 16px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    width:30%; 
-    height:460px;
-    float:left; 
-    margin-left: 50px;  
+.bottomSmall-box {
+    display: flex;
+    justify-content: center;
 }
 
-.Days
-{
+.bottomSmall-boxShadow {
+    box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
+    width: 8em;
+    padding: 5px;
+}
+
+.counterAlign {
+    align-items: baseline;
+}
+
+.quoteText {
+    font-size: large;
+}
+
+#cardleft {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 30%;
+    height: 460px;
+    float: left;
+    margin-left: 50px;
+}
+
+#cardMiddle {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 30%;
+    height: 460px;
+    float: left;
+    margin-left: 50px;
+}
+
+#cardRight {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    width: 30%;
+    height: 460px;
+    float: left;
+    margin-left: 50px;
+}
+
+.Days {
     float: center;
     font-family: monospace;
     font-size: 700%;
 }
 
-.Quote
-{
+.Quote {
     text-align: center;
     padding-top: 32%;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-style: italic;
 }
 
-.sidebar{
+.sidebar {
     padding-left: 0px;
     background-color: #1f1f1f;
     min-height: 100vmin;
     width: 200px;
 }
 
-.container {
-    
-    display: flex;
-    justify-content: center;
-  }
+@media (Max-width: 1000px) {
+    .row {
+        display: contents;
+    }
+    .mainbox-height {
+        min-height: 200px;
+    }
+    .col-md {
+        display: inline;
+    }
+    .bottomSmall-boxShadow {
+        box-shadow: none;
+        width: 5em;
+    }
+    .BoxText {
+        padding-top: 0;
+    }
+    .counterAlign {
+        text-align-last: end;
+    }
+    .quoteText {
+        font-size: xx-large;
+    }
+}
