--- a/styles/userDetails.css
+++ b/styles/userDetails.css
@@ -1,4 +1,5 @@
 /* The popup form - hidden by default */
+
 .form-popup {
     display: none;
     position: fixed;
@@ -6,48 +7,69 @@
     right: 60px;
     border: 3px solid #f1f1f1;
     z-index: 9;
-  }
+}
 
-  /* Add styles to the form container */
+
+/* Add styles to the form container */
+
 .form-container {
     max-width: 300px;
     padding: 10px;
     background-color: white;
-  }
+}
 
-  /* Full-width input fields */
-.form-container input[type=date], .form-container input[type=number] {
+
+/* Full-width input fields */
+
+.form-container input[type=date],
+.form-container input[type=number] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
     border: none;
     background: #f1f1f1;
-  }
+}
 
-  /* When the inputs get focus, do something */
-.form-container input[type=date]:focus, .form-container input[type=number]:focus {
+
+/* When the inputs get focus, do something */
+
+.form-container input[type=date]:focus,
+.form-container input[type=number]:focus {
     background-color: #ddd;
     outline: none;
-  }
-  
-  /* Set a style for the submit/login button */
-  .form-container .btn {
+}
+
+
+/* Set a style for the submit/login button */
+
+.form-container .btn {
     background-color: #4CAF50;
     color: white;
     padding: 16px 20px;
     border: none;
     cursor: pointer;
     width: 100%;
-    margin-bottom:10px;
+    margin-bottom: 10px;
     opacity: 0.8;
-  }
+}
 
-  /* Add a red background color to the cancel button */
+
+/* Add a red background color to the cancel button */
+
 .form-container .cancel {
     background-color: red;
-  }
-  
-  /* Add some hover effects to buttons */
-  .form-container .btn:hover, .open-button:hover {
+}
+
+
+/* Add some hover effects to buttons */
+
+.form-container .btn:hover,
+.open-button:hover {
     opacity: 1;
-  }
+}
+
+@media (Max-width: 1000px) {
+    .form-container {
+        max-width: 600px;
+    }
+}
